syntax = "proto3";

option go_package="store";

package store;

message PersistedEvent {
    bytes id = 1;
    bytes stream = 2;
    uint32 version = 3;
    string type = 4;
    bytes data = 5;
    bytes metadata = 6;
    bytes causation_id = 7;
    bytes correlation_id = 8;
    int64 added_at = 9;
}

message PersistedStream {
    bytes id = 1;
    repeated bytes events = 2;
    int64 added_at = 3;
}